--- a/src/itc505/homework/3/3.html
+++ b/src/itc505/homework/3/3.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/Users/nandamuriraghuram/Documents/website/hw3.css">
+  <link rel="stylesheet" href="hw3.css">
   <title>SERVING FONTS</title>
 </head>
 <body>
