--- a/src/itc505/Lab/4/4.html
+++ b/src/itc505/Lab/4/4.html
@@ -51,7 +51,30 @@
 </ul>
 
 </article>
+<section>
+<h2>Addendum:</h2>
 
+<p><b>Background Image:</b> The background image applied to the entire page is of Abraham Lincoln. It adds a historical and thematic element to the website. The background-size: cover ensures that the image covers the entire viewport, and background-position: center center centers the image both vertically and horizontally. The background-attachment: fixed creates a parallax effect as the user scrolls.</p>
 
+<p><b>Font Choices:</b>
+
+Headers (h1 and h2): The font choices for h1 and h2 include 'Oswald' and 'Young Serif' for h1, and 'Open Sans' and 'Roboto Slab' for h2. These fonts have different characteristics, providing a visual contrast between the headings. 'Oswald' and 'Open Sans' are sans-serif fonts, while 'Young Serif' and 'Roboto Slab' are serif fonts. This contrast creates a visually appealing hierarchy.
+
+Paragraphs (p): Three different fonts are applied to paragraphs for variety and visual interest: 'Akronim' (cursive), 'Almendra SC' (serif), and 'Pixelify Sans' (cursive). These fonts bring a unique look to the text, making it more engaging and artistic.
+
+Heading Sizes: The choice of different fonts and sizes for h1 and h2 helps create a hierarchy in the content. h1 is styled with larger fonts to make it a prominent title, while h2 has slightly smaller fonts to denote subsections.</P>
+
+<p><b>Color Choices:</b>
+
+Text (body): The main text color is set to black (#000), ensuring good readability against the background image.
+
+Header (header): The header has a white background (#fff) to create a visual separation from the content area.
+
+Subsection Headings (h3): These are styled with a dark gray color (#333) to provide a clear distinction from the main text.
+
+Paragraphs (p): The paragraph text color is also set to dark gray (#333) for consistency with subsection headings.</p>
+
+<p><b>Margin and Padding Choices:</b> The stylesheet defines margin and padding for various elements. For example, the header has padding to create space around the header text. Margins are added to li elements to provide spacing between list items. Additionally, paragraphs have a margin of 10px on top and bottom to ensure they are well-spaced.</p>
+</section>
 </body>
 </html>
