--- a/src/itc505/lab/6/Index.html
+++ b/src/itc505/lab/6/Index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/Users/nandamuriraghuram/Documents/website/untitled folder/Index.css">
+  <link rel="stylesheet" href="Index.css">
   <title>Holy Grail Layout</title>
 </head>
 <body>
