--- a/src/itc505/lab/6/Index.html
+++ b/src/itc505/lab/6/Index.html
@@ -77,6 +77,6 @@
   </div>
 </footer>
 
-  <script src="/Users/nandamuriraghuram/Documents/website/untitled folder/Index.js"></script>
+  <script src="Index.js"></script>
 </body>
 </html>
