--- a/src/itc505/mid/mid.html
+++ b/src/itc505/mid/mid.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Users/nandamuriraghuram/Documents/website/Mid Term/style.css">
+    <link rel="stylesheet" href="style.css">
     <title>Whispers of the Mystery Cave</title>
 </head>
 <body>
@@ -21,7 +21,7 @@
         </div>
     </div>
 
-    <script src="/Users/nandamuriraghuram/Documents/website/Mid Term/script.js"></script>
+    <script src="script.js"></script>
 
 <footer>
         <div id="addendum">
